feat(pet): incorporate openapirouter
