# plugins/pet-backend/src/schema/openapi.yaml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   description: API for managing pets.
 
-openapi: 3.1.0
+openapi: 3.0.0
 paths:
   /health:
     get:
@@ -61,13 +61,13 @@ paths:
             type: string
       responses:
         '200':
-          description: 200 response
+          description: Pet updated
           content:
             application/json; charset=utf-8:
               schema:
                 $ref: '#/components/schemas/Pet'
         '404':
-          description: 404 response
+          description: Pet not found
           content:
             application/json; charset=utf-8:
               schema:
@@ -166,9 +166,6 @@ components:
           type: string
         type:
           type: string
-      required:
-        - name
-        - type
 
   securitySchemes:
     JWT:
